[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/Enemies/TheArchaeologist/TheArchaeologist.gd" type="Script" id=1]
[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/ArchaeologistIdle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/TheArchaeologist/ArchaeologistSummon.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool white;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	
	if(white){
		COLOR = vec4 (1, 1, 1, color.a)
	}else{
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 1 )
shader_param/white = null

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Summon",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 39.4432, 54.1167 )

[node name="The Archaeologist" type="KinematicBody2D" groups=[
"archaeologist",
]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 19 )
position = Vector2( 0, -64.1902 )
frames = SubResource( 35 )
animation = "Summon"
frame = 14
playing = true

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0, -54.6769 )
shape = SubResource( 36 )

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
